feat(spark): refactor to support multiple versions of spark
There are a number of Spark API breaking changes between
3.x and 4.x.
This commit refactors the code to abstract affected API calls
into a compatibility interface which can be implemented by each version.

Signed-off-by: Andrew Coleman <andrew_coleman@uk.ibm.com>